fix bank and active hand buttons spacing

--- a/css/main.css
+++ b/css/main.css
@@ -11,32 +11,32 @@ body {
 }
 
 .modal {
-  display: flex; 
+  display: flex;
   justify-content: center;
   align-items: center;
-  position: fixed; 
-  z-index: 1; 
+  position: fixed;
+  z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; 
-  height: 100%; 
-  background-color: rgba(0, 0, 0, 0.7); 
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .modal-content {
-  background-color: white;
+  background-color: rgb(231, 226, 226);
   padding: 20px;
   border-radius: 10px;
   text-align: center;
   max-width: 500px;
-  width: 90%; 
-  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+  width: 90%;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 }
 
 #start-game-btn {
   margin-top: 20px;
   padding: 10px 20px;
-  font-size: 16px;
+  font-size: 18px;
   color: white;
   background-color: #0f9806;
   border: none;
@@ -48,7 +48,6 @@ body {
 button:hover {
   background-color: #45a049;
 }
-
 
 .main-container {
   display: flex;
@@ -64,7 +63,7 @@ button:hover {
   justify-content: center;
   border: 4px none;
   padding: 2%;
-  border: solid black
+  border: solid black;
 }
 
 button {
@@ -86,8 +85,6 @@ button {
 }
 
 button:hover {
-  /* background-color: grey;
-  color: white; */
   background-color: #2c2c2c; /* Slightly darker on hover */
   box-shadow: 0px 7px 12px rgba(0, 0, 0, 0.4); /* Enhance shadow on hover */
 }
@@ -113,29 +110,28 @@ h3 {
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
-
 .bank {
   display: flex;
   flex-direction: column;
   align-items: center;
   align-self: center;
-  /* margin: 2em 30em; */
   border: solid rgba(129, 126, 126, 0.91);
   background-color: rgb(255, 255, 255);
   width: 50%;
-  /* padding: 1.5em; */
-  /* margin-top: 10%; */
+  padding: .75em;
+  margin-top: 2vh;
   color: grey;
   border-radius: 10px;
   box-shadow: 0px 7px 12px rgba(0, 0, 0, 0.4);
-} 
-
+}
 
 #hand-active-controls {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 2%
+  margin: 2%;
+  gap: 4vw;
+  padding-top: 1vh;
 }
 
 #hand-over-controls {
@@ -145,7 +141,7 @@ h3 {
   align-items: center;
 }
 
-.controls-container  {
+.controls-container {
   display: flex;
   flex-direction: column;
 }
@@ -155,17 +151,16 @@ h4 {
 }
 
 #dealer-hand.card-container {
-  border: 2px solid black; 
-  padding: 10px; 
-  margin: 10px; 
+  border: 2px solid black;
+  padding: 10px;
+  margin: 10px;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.4);
 }
 #player-hand.card-container {
-  border: 2px solid black; 
-  padding: 10px; 
-  margin: 10px; 
-  box-shadow:0px 5px 10px rgba(0, 0, 0, 0.4);
-  
+  border: 2px solid black;
+  padding: 10px;
+  margin: 10px;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.4);
 }
 
 #dealer-has {
@@ -176,4 +171,12 @@ h4 {
 #player-has {
   margin-top: 10px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+#stand-btn {
+  font-size: 14px;
+}
+
+#hit-btn {
+  font-size: 14px;
 }
